cambio por tarjeta canva

--- a/index.html
+++ b/index.html
@@ -3,50 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¡Feliz Navidad!</title>
+    <title>Landing Page Navideña</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Estilo Personalizado -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- MY CSS -->
+    <link rel="stylesheet" href="../nav1/css/styles.css">
+    
 </head>
 <body>
-    <div class="container text-center py-5">
-        <!-- Encabezado -->
-        <h1 class="mb-4">🎄 ¡Feliz Navidad, [Nombre]! 🎄</h1>
-        <p class="mb-4">Te deseamos una temporada llena de alegría y amor.</p>
 
-        <!-- Galería de Fotos -->
-        <div id="photoCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/images/photo1.jpg" class="d-block w-100" alt="Foto 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/images/photo2.jpg" class="d-block w-100" alt="Foto 2">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#photoCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#photoCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </button>
+    <div class="main-container">
+        <div>
+            
+            <!-- Aquí irán otros elementos en el futuro, como formularios de carga de imágenes -->
         </div>
-
-        <!-- Stickers -->
-        <div class="stickers d-flex justify-content-center flex-wrap">
-            <img src="assets/stickers/sticker1.png" alt="Sticker 1" class="sticker mx-2">
-            <img src="assets/stickers/sticker2.png" alt="Sticker 2" class="sticker mx-2">
-            <img src="assets/stickers/sticker3.png" alt="Sticker 3" class="sticker mx-2">
-        </div>
-
-        <!-- Botón de Acción -->
-        <a href="whatsapp://send?text=¡Mira mi página personalizada de Navidad! [URL]" class="btn btn-success mt-4">¡Compártelo en WhatsApp!</a>
     </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Script Personalizado -->
-    <script src="scripts.js"></script>
+    <!-- Bootstrap JS y Popper (para algunas interacciones de Bootstrap) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
+    <!-- MY JS -->
+     <script src=".js/script.js"></script>
 </body>
 </html>
