--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page Navideña</title>
+    <title>Feliz Navidad Danielli!</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- MY CSS -->
@@ -19,11 +19,14 @@
         </div>
     </div>
 
+    <!-- Imagen en forma de óvalo, alineada a la derecha -->
+    <img src="../nav1/img/photo1.JPG" alt="Imagen navideña" class="oval-image">
+
     <!-- Bootstrap JS y Popper (para algunas interacciones de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
     <!-- MY JS -->
-     <script src=".js/script.js"></script>
+     <script src="../nav1/js/scripts.js"></script>
 </body>
 </html>
